# clearnings

./: LICENSE  README.md
sourcecode/Array_Points/: notes.md
sourcecode/C/FILEs/class1/: CMakeLists.txt  main.c  note.md
sourcecode/C/FILEs/class2/: main.c  note.md  testfile.file
sourcecode/C/FILEs/class3/: CMakeLists.txt  main.cpp  note.md  string.file
sourcecode/C/FILEs/class4/: CMakeLists.txt  mycopy.c  note.md
sourcecode/C/chains/: CMakeLists.txt  main.c
sourcecode/C/string/Array_Points/: CMakeLists.txt  main.c  notes.md
sourcecode/C/structure/class1/: CMakeLists.txt  main.c  note.md
sourcecode/C/structure/class2/: CMakeLists.txt  Structure2.md  main.c
sourcecode/C/structure/class3/: Hero.c  Hero.h  main.c
sourcecode/C/structure/class4/: Hero.c  Hero.h  main.c
sourcecode/C/structure/class5/: CMakeLists.txt  main.c
sourcecode/CPP/CLASS/: string
sourcecode/CPP/CLASS/CLASS1/: CMakeLists.txt  LandOwner.cpp  Student.h  (+11 more)
sourcecode/CPP/CLASS/CLASS2/CLASS2/: CLASS2.cpp  CLASS2.h  CMakeLists.txt  landowner.cpp  landowner.h
sourcecode/FILEs/class1/: main.c  note.md
sourcecode/FILEs/class2/: CMakeLists.txt
sourcecode/FILEs/class3/: CMakeLists.txt  note.md
sourcecode/FILEs/class4/: note.md
sourcecode/chains/: main.c
sourcecode/string/Array_Points/: CMakeLists.txt  main.c
sourcecode/structure/class1/: CMakeLists.txt
sourcecode/structure/class2/: Structure2.md
sourcecode/structure/class3/: Hero.c  main.c
sourcecode/structure/class4/: Hero.c  Hero.h  main.c
sourcecode/structure/class5/: CMakeLists.txt
testProj/: CMakeLists.txt  main.c
(+7 files in other folders)
